# PanelMethod

./: CMakeLists.txt  main.glade
src/: main.c
src/geometry/: airfoil.c  airfoil.h  wing.c  wing.h
src/graphics/: mesh.c  mesh.h  object.c  object.h  render.c  render.h  section.c  section.h
src/solver/: mesh.c  mesh.h  panel.c  panel.h
src/util/: vectormath.c  vectormath.h
